2008-02-02  Dalibor Topic  <robilad@kaffe.org>

	* m4/gmp.m4: Removed.
	
2008-02-02  Dalibor Topic  <robilad@kaffe.org>

	* libraries/clib/math/BigInteger.c,
	libraries/clib/math/.cvsignore,
	libraries/clib/math/Makefile.am,
	libraries/clib/math/Makefile.in,
	libraries/javalib/gmp-math/.cvsignore,
	libraries/javalib/gmp-math/Makefile.am,
	libraries/javalib/gmp-math/Makefile.in,
	libraries/javalib/gmp-math/java/math/BigDecimal.java,
	libraries/javalib/gmp-math/java/math/BigInteger.java:
	Removed.

	* configure.ac: Removed checks for GNU MP and native math.

	* libraries/clib/Makefile.am (SUBDIRS): 
	Removed math dir.

	* libraries/javalib/Makefile.am (SUBDIRS): Removed
	gmp-math dir.

2008-02-02  Dalibor Topic  <robilad@kaffe.org>

	* WHATSNEW: Documented JAR reading dependency change.

	* TODO: Updated.

	* FAQ/FAQ.requiredlibraries: Removed section on zlib.

2008-02-02  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac: Removed checks for zlib.h, libz, and ZIP_LIBS.

	* libraries/clib/zip/Makefile.am (libzip_la_CFLAGS): Added
	ZZIP_CFLAGS. (libzip_la_LIBADD): Replaced ZIP_LIBS by ZZIP_LIBS.

2008-02-02  Dalibor Topic  <robilad@kaffe.org>


	* libraries/javalib/zlib-zip/org/kaffe/util/Assert.java,
	libraries/javalib/zlib-zip/org/kaffe/util/UTF8.java,
	libraries/javalib/zlib-zip/org/kaffe/util/zip/SwitchInflater.java,
	libraries/clib/zip/Inflater.c,
	libraries/clib/zip/Deflater.c,
	libraries/javalib/zlib-zip/java/util/zip/Inflater.java,
	libraries/javalib/zlib-zip/java/util/zip/Deflater.java:
	Removed.
	
	* libraries/clib/zip/Makefile.am (libzip_la_SOURCES): 
	Removed Inflater.c and Deflater.c.

	* libraries/javalib/zlib-zip/Makefile.am (dist_zlib_JAVA): 
	Removed org/kaffe/util/Assert.java, org/kaffe/util/UTF8.java,
	org/kaffe/util/zip/SwitchInflater.java, java/util/zip/Inflater.java,
	java/util/zip/Deflater.java.

2008-02-02  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/zlib-zip/java/util/zip/DeflaterOutputStream.java:
	Removed.
	